@startuml SiManggis-StateMachine
!theme plain

[*] --> MENUNGGU : warga submit

state MENUNGGU {
  note "Permohonan: tunggu RT approve via WA\nPengaduan: tunggu staff proses"
}

MENUNGGU --> DISETUJAI_RT : RT balas "SETUJU"\n(via Fonnte webhook)
MENUNGGU --> DITOLAK_RT : RT balas "TOLAK [alasan]"\n(via Fonnte webhook)
MENUNGGU --> DIPROSES : Staff Kelurahan\nproses pengaduan

state DISETUJAI_RT {
  note "Permohonan: RT sudah approve,\nsiap diproses Kelurahan"
}

state DITOLAK_RT {
  note "Permohonan: RT tolak\n(catatan = alasan penolakan)\n→ END"
}

DISETUJAI_RT --> DIPROSES : Staff Kelurahan\nmulai proses
DISETUJAI_RT --> DITOLAK : Staff Kelurahan\ntolak (rare case)
DITOLAK_RT --> [*] : selesai

state DIPROSES {
  note "Staff Kelurahan sedang\nmemproses permohonan/pengaduan"
}

DIPROSES --> SELESAI : Staff Kelurahan\ntandai selesai
DIPROSES --> DITOLAK : Staff Kelurahan\ntolak (alasan)

state SELESAI {
  note "Selesai diproses.\nUntuk permohonan: surat sudah\nbisa di-download warga"
}

state DITOLAK {
  note "Ditolak. Warga bisa\nsubmit permohonan baru"
}

SELESAI --> [*]
DITOLAK --> [*]

note top of MENUNGGU
  PERMOHONAN:
  1. Warga submit → status MENUNGGU
  2. RT approve via WA → DISETUJAI_RT
  3. Staff proses → DIPROSES → SELESAI

  PENGADUAN:
  1. Warga submit → status MENUNGGU
  2. Langsung staff proses → DIPROSES
  (TIDAK ada step RT approval)
end note

note bottom of [*]
  END STATES:
  - SELESAI → warga bisa download surat (permohonan)
  - DITOLAK_RT / DITOLAK → warga perlu resubmit
end note

@enduml